k8s-manifests/user-app/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crewmeister-service
  namespace: crewmeister
  labels:
    app: crewmeister
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"
spec:
  selector:
    app: crewmeister
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
