k8s-manifests/user-app/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crewmeister-ingress
  namespace: crewmeister
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: external-nginx
  rules:
    - host: crewmeister.dkhalid.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crewmeister-service
                port:
                  number: 80
  tls:
    - hosts:
        - crewmeister.dkhalid.com
      secretName: crewmeister-dkhalid-com
